--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <main>
+            <h1 class="sr-only">Blog preview card</h1>
             <!-- Blog card -->
             <div class="blog-card">
                 <img
