Refactor & add comment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <main>
-            <h1 class="sr-only">Blog preview card</h1>
+        <!-- Visually hidden h1 -->
+        <h1 class="sr-only">Blog preview card</h1>
+        <main>        
             <!-- Blog card -->
             <div class="blog-card">
                 <img
