--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <!-- Visually hidden h1 -->
-        <h1 class="sr-only">Blog preview card</h1>
+        <header>
+            <!-- Visually hidden h1 -->
+            <h1 class="sr-only">Blog preview card</h1>
+        </header>
         <main>        
             <!-- Blog card -->
             <div class="blog-card">
